Actions
Bug #10145
closedsmbios_info_boot() gets NULL check wrong
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
We shouldn't dereference 'stp' before we check it.
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 0b427924a934b5ebe2ecd53ed66d8e65892da75e
commit 0b427924a934b5ebe2ecd53ed66d8e65892da75e Author: John Levon <john.levon@joyent.com> Date: 2019-03-12T21:15:29.000Z 10145 smbios_info_boot() gets NULL check wrong Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Richard Lowe <richlowe@richlowe.net>
Actions